[project]
name = "yapypcl"
version = "0.1.0"
description = "Yappy Pickle - A toy parser combinator library for Python."
authors = [
    {name = "Zane Hargis", email = "zanehargis@gmail.com"},
]
dependencies = [
    "pytest>=8.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
python_files = ["test_*", "*_test"]
python_functions = ["test_*", "*_test"]
testpaths = ["tests"]

[tool.pdm]
distribution = false
